Bug 75066 - [REGRESSION] Cannot <TAB> advance through custom properties in Custom Properties tab since 4.1.x
Summary: [REGRESSION] Cannot <TAB> advance through custom properties in Custom Propert...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.5.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0
Keywords: accessibility, bibisected, regression
Depends on:
Blocks:
 
Reported: 2014-02-16 21:34 UTC by John L. ten Wolde
Modified: 2015-12-18 09:27 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John L. ten Wolde 2014-02-16 21:34:26 UTC
Hello.  Starting with the 4.1 branch it is no longer possible to <TAB>-key advance through custom fields created in the File > Properties > Custom Properties tab as it was in 4.0 and earlier.  Instead, the <TAB> key now advances around the dialog from the tab's title through its buttons and back without ever entering the custom field box, and the only way to edit a field's type and value is with the mouse.  I've confirmed this behaviour in 4.2 as well.

I spend up to half my waking hours using LO Writer and anything that forced me to reach for the mouse disrupts my work flow.  I would greatly appreciate it if this regression were fixed.  Thanks.
Comment 1 gagrilli 2014-02-17 08:18:50 UTC
I can confirm the reported behaviour in 4.1.4 AND 4.2.0.4.
Have not used the Custom Properties though, so I do not know about the 3. era versions.

Can you post your working platform? My system is Opensuse 12.2 64.bit
Comment 2 John L. ten Wolde 2014-02-17 20:00:07 UTC
Platform is Mageia 4 and confirmed on both x86 and x86_64 architectures.
Comment 3 John L. ten Wolde 2014-02-20 20:34:33 UTC
LO 4.1.5.3 came down Mageia 4's update pipe yesterday, and though it's no surprise this bug persists in that release, I'm updating the version number above to match.
Comment 4 John L. ten Wolde 2014-08-19 20:43:44 UTC
Giving this a bump to say the regression persists in 4.2.5.2 release.
Comment 5 Buovjaga 2014-11-05 07:33:35 UTC
Confirmed and added whiteboard and keyword.

Win 7 64-bit Version: 4.4.0.0.alpha1+
Build ID: b7d8a58ff2698ffc6e22943f64aa97c5ea253bd9
TinderBox: Win-x86@42, Branch:master, Time: 2014-11-05_00:40:38
Comment 6 V Stuart Foote 2014-11-05 07:57:47 UTC
@Caolán, Adolpho,

With recent work on dinfdlg.hxx and dinfdlg.cxx for bug 85111, can you judge if restoring the missing keyboard navigation of this dialog would be a simple adjustment?

Stuart
Comment 7 Michael Stahl 2014-11-12 16:51:48 UTC
bibisect range: fff4d120866a0be3cd8185f2c67bb9f59b1a6a3f..3c70c8e449253b4219c12ee4ef50384030a474ef 

this one looks suspicious:

commit ae4f2c72b7a93085025859cbf1698651831e1b44
Author:     Caolán McNamara <caolanm@redhat.com>
AuthorDate: Wed Dec 19 12:33:21 2012 +0000

    split out custom properties info page and convert to .ui
    
    The CustomPropertiesWindow could be converted to something that inherits from
    one of the new containers and remove a load of that custom positioning code but
    for now just minimally retro-fit the existing manual position setting code of
    the custom scrolling widget.
Comment 8 Commit Notification 2014-11-18 16:56:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0cda507b30fdbbc19b0d4b27fccbebf7829b4404

Resolves: fdo#75066 add TABSTOP and DIALOGCONTROL bits

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 John L. ten Wolde 2014-12-23 20:13:34 UTC
Original reporter here.  I took 4.4.0 RC1 for a spin yesterday and can confirm that the issue is indeed fixed for me.

Thanks to everyone involved for getting this sorted. :-)
Comment 10 Robinson Tryon (qubit) 2015-12-17 07:38:04 UTC Comment hidden (obsolete)
Comment 11 Robinson Tryon (qubit) 2015-12-18 09:27:43 UTC Comment hidden (obsolete)