Resolves: fdo#75066 add TABSTOP and DIALOGCONTROL bits

to this custom widget to state that is is a candidate for tabstopping to, and
that its a (old-school) container widget which has subwidgets which should be
candidates too

Change-Id: I39452f906b30c3962026ab9c4dba625ecd2d06a8